tests/snapshots/regression/semantic_types__type_classes__missing_instance_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
error[E444]: No Type Class Instance

No instance for `Sizeable<String>`.

  tests/fixtures/semantic_types/type_classes/missing_instance_error.flx:10:5
   |
10 |     size("flux")
   |     ^^^^^^^^^^^^

Hint:
  Add an instance: `instance Sizeable<String> { ... }`
